create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="cid-s66NuLvTZk" id="video3-1">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="cid-s66NuLvTZk" id="video3-1">
 
     
     
