--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                          <img src="assets/images/streetv-main-logo-264x264.jpeg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Whatch It!</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Watch It!</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="cid-s66NuLvTZk" id="video3-1">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-s66NuLvTZk" id="video3-1">
 
     
     
