--- a/page1.html
+++ b/page1.html
@@ -45,7 +45,7 @@
                          <img src="assets/images/streetv-main-logo-264x264.jpeg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Whatch It!</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Watch It!</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="cid-s6a6yvqfg9" id="video2-e">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-s6a6yvqfg9" id="video2-e">
 
     
     
