create github pages

--- a/page1.html
+++ b/page1.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-s6a6yvqfg9" id="video2-e">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="cid-s6a6yvqfg9" id="video2-e">
 
     
     
