--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-s66NuLvTZk" id="video3-1">
+<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="cid-s66NuLvTZk" id="video3-1">
 
     
     
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="mbr-figure" style="width: 105%;">
-                    <img src="assets/images/streetv-logo.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/streetv-main-logo-500x500.jpg" alt="Mobirise" title="">
             </div>
         </div>
     </div>
